--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.application.name=Ganache-Web3j-Demo
 # 应用服务 WEB 访问端口
 server.port=8080
 
+logging.level.web=debug
+logging.level.root=debug
+logging.level.sql=debug
+
 
