--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
             <version>4.4.15</version>
         </dependency>
 
+        <!-- Json -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
+
 
         <!-- Protocol Buffer -->
         <dependency>
