--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,14 @@
             <version>2.0.5</version>
         </dependency>
 
+        <!-- Web Crawler Reader Use -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+
 
 
         <!-- Protocol Buffer -->
