--- a/Web3j-Combination-Demo/pom.xml
+++ b/Web3j-Combination-Demo/pom.xml
@@ -2,16 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>Ganache-Web3j-Demo</artifactId>
-        <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
 
+    <groupId>com.example</groupId>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>Web3j-Combination-Demo</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -23,40 +25,47 @@
         <dependency>
             <groupId>org.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
+            <version>0.16.1</version>
         </dependency>
 
         <!-- Web3j依赖 -->
         <dependency>
             <groupId>org.web3j</groupId>
             <artifactId>core</artifactId>
+            <version>5.0.0</version>
         </dependency>
 
         <!-- Web3j for Eth 2.0 -->
         <dependency>
             <groupId>org.web3j.eth2</groupId>
             <artifactId>beacon-node-api</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- LND Lightning Network 依赖 -->
         <dependency>
             <groupId>org.lightningj</groupId>
             <artifactId>lightningj</artifactId>
+            <version>0.14.3-Beta</version>
         </dependency>
 
         <!-- c-Lightning Lightning Network 依赖 -->
         <dependency>
             <groupId>io.github.clightning4j</groupId>
             <artifactId>jrpclightning</artifactId>
+            <version>0.2.1</version>
         </dependency>
 
         <!-- Use Macaroon -->
         <dependency>
             <groupId>com.github.nitram509</groupId>
             <artifactId>jmacaroons</artifactId>
+            <version>0.4.1</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
         </dependency>
 
         <!-- Okhttp -->
@@ -64,43 +73,52 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
         </dependency>
         <!-- okhttp + tls -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp-tls</artifactId>
+            <version>4.9.3</version>
         </dependency>
         <!-- SSLContexts -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
+            <version>4.4.15</version>
         </dependency>
 
         <!-- Json -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+            <version>2.0.5</version>
         </dependency>
 
         <!-- Web Crawler Reader Use -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
         </dependency>
         <!-- Excel Utils, https://sargeraswang.com/blog/2018/11/27/excelutil-1-dot-2-1-doc/ -->
         <dependency>
             <groupId>com.sargeraswang.util</groupId>
             <artifactId>excel-util</artifactId>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
+            <version>3.1.1</version>
         </dependency>
+
 
         <!-- Protocol Buffer -->
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
+            <version>3.20.0</version>
         </dependency>
 
         <dependency>
@@ -129,9 +147,22 @@
         <dependency>
             <groupId>com.ibm.cloud</groupId>
             <artifactId>ssl-context-spring-boot-starter</artifactId>
+            <version>0.0.15</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
