--- a/Raw-Lightning-Demo/pom.xml
+++ b/Raw-Lightning-Demo/pom.xml
@@ -47,12 +47,33 @@
             <artifactId>commons-codec</artifactId>
             <version>1.11</version>
         </dependency>
+
         <dependency>
             <groupId>org.web3j</groupId>
             <artifactId>utils</artifactId>
             <version>5.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+        <!-- Bench mark -->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.33</version>
+        </dependency>
+
     </dependencies>
 
     <build>
