adding create invoice testing by using raw grpc

--- a/Web3j-Combination-Demo/pom.xml
+++ b/Web3j-Combination-Demo/pom.xml
@@ -150,6 +150,12 @@
             <version>0.0.15</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-stub</artifactId>
+            <version>1.36.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
