--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>Raw-Lightning-Demo</module>
         <module>Web3j-Combination-Demo</module>
+        <module>OpenSea-Nft-Demo</module>
     </modules>
 
     <name>Ganache-Web3j-Demo</name>
