--- a/E2Pay-Api-Demo/pom.xml
+++ b/E2Pay-Api-Demo/pom.xml
@@ -42,7 +42,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.5</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
