adding module for recording tricks + flat completable future trick

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Web3j-Combination-Demo</module>
         <module>OpenSea-Nft-Demo</module>
         <module>E2Pay-Api-Demo</module>
+        <module>Programmer-Trick-Demo</module>
     </modules>
 
     <name>Ganache-Web3j-Demo</name>
