--- a/Programmer-Trick-Demo/pom.xml
+++ b/Programmer-Trick-Demo/pom.xml
@@ -23,6 +23,15 @@
             <version>5.2.12.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- AWS -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-aws</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
