--- a/Web3j-Combination-Demo/pom.xml
+++ b/Web3j-Combination-Demo/pom.xml
@@ -94,6 +94,12 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.5</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba</groupId>-->
+<!--            <artifactId>fastjson</artifactId>-->
+<!--            <version>1.2.83</version>-->
+<!--        </dependency>-->
+
 
         <!-- Web Crawler Reader Use -->
         <dependency>
