--- a/Web3j-Combination-Demo/pom.xml
+++ b/Web3j-Combination-Demo/pom.xml
@@ -32,6 +32,13 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- Cosmos protobuf -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Cosmos-Sdk-Protobuf</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
         <!-- 包含ECC相关依赖 -->
         <dependency>
