--- a/Cosmos-Sdk-Protobuf/pom.xml
+++ b/Cosmos-Sdk-Protobuf/pom.xml
@@ -61,6 +61,8 @@
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                     </pluginArtifact>
+                    <protoSourceRoot>src/main/proto</protoSourceRoot>
+                    <clearOutputDirectory>true</clearOutputDirectory>
                 </configuration>
                 <executions>
                     <execution>
