tmp commit -> array or list input

--- a/Cosmos-Sdk-Protobuf/pom.xml
+++ b/Cosmos-Sdk-Protobuf/pom.xml
@@ -18,6 +18,14 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- grpc -->
         <dependency>
             <groupId>io.grpc</groupId>
