--- a/Cosmos-Sdk-Protobuf/pom.xml
+++ b/Cosmos-Sdk-Protobuf/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.5</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
