--- a/Web3j-Combination-Demo/pom.xml
+++ b/Web3j-Combination-Demo/pom.xml
@@ -32,12 +32,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <!-- Cosmos protobuf -->
-        <dependency>
-            <groupId>com.own</groupId>
-            <artifactId>Cosmos-Sdk-Protobuf</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        &lt;!&ndash; Cosmos protobuf &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.own</groupId>-->
+        <!--            <artifactId>Cosmos-Sdk-Protobuf</artifactId>-->
+        <!--            <version>1.0-SNAPSHOT</version>-->
+        <!--        </dependency>-->
 
 
         <!-- 包含ECC相关依赖 -->
@@ -247,6 +247,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
 
 
