--- a/Third-Party-Api-Demo/pom.xml
+++ b/Third-Party-Api-Demo/pom.xml
@@ -61,6 +61,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Web3j依赖 -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <version>4.9.8</version>
+        </dependency>
+
 <!--        &lt;!&ndash; JsonRpc &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>com.github.briandilley.jsonrpc4j</groupId>-->
