--- a/Programmer-Trick-Demo/pom.xml
+++ b/Programmer-Trick-Demo/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>Programmer-Trick-Demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -31,10 +35,5 @@
         </dependency>
 
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
 </project>
