--- a/Third-Party-Api-Demo/pom.xml
+++ b/Third-Party-Api-Demo/pom.xml
@@ -73,6 +73,14 @@
             <version>4.1.0</version>
         </dependency>
 
+        <!-- Binance -->
+        <dependency>
+            <groupId>io.github.binance</groupId>
+            <artifactId>binance-connector-java</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
