--- a/Third-Party-Api-Demo/pom.xml
+++ b/Third-Party-Api-Demo/pom.xml
@@ -80,6 +80,13 @@
             <version>3.1.0</version>
         </dependency>
 
+        <!-- MarkDown -->
+        <dependency>
+            <groupId>net.steppschuh.markdowngenerator</groupId>
+            <artifactId>markdowngenerator</artifactId>
+            <version>1.3.1.1</version>
+        </dependency>
+
 
 
     </dependencies>
