--- a/Programmer-Trick-Demo/pom.xml
+++ b/Programmer-Trick-Demo/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-cloud-starter-aws</artifactId>
             <version>2.2.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
