--- a/Programmer-Trick-Demo/pom.xml
+++ b/Programmer-Trick-Demo/pom.xml
@@ -42,6 +42,20 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Trove -->
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+        <!-- FastUtil -->
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>8.5.12</version>
+        </dependency>
+
     </dependencies>
 
 
