--- a/Third-Party-Api-Demo/pom.xml
+++ b/Third-Party-Api-Demo/pom.xml
@@ -80,13 +80,26 @@
             <version>3.1.0</version>
         </dependency>
 
+        <!-- Common Marks -->
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.21.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark-ext-gfm-tables</artifactId>
+            <version>0.21.0</version>
+        </dependency>
+
+
         <!-- MarkDown -->
         <dependency>
             <groupId>net.steppschuh.markdowngenerator</groupId>
             <artifactId>markdowngenerator</artifactId>
             <version>1.3.1.1</version>
         </dependency>
-
 
 
     </dependencies>
