--- a/Third-Party-Api-Demo/pom.xml
+++ b/Third-Party-Api-Demo/pom.xml
@@ -80,19 +80,24 @@
             <version>3.1.0</version>
         </dependency>
 
+        <!-- Telegram-API -->
+        <dependency>
+            <groupId>com.github.pengrad</groupId>
+            <artifactId>java-telegram-bot-api</artifactId>
+            <version>6.9.1</version>
+        </dependency>
+
         <!-- Common Marks -->
         <dependency>
             <groupId>org.commonmark</groupId>
             <artifactId>commonmark</artifactId>
             <version>0.21.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.commonmark</groupId>
             <artifactId>commonmark-ext-gfm-tables</artifactId>
             <version>0.21.0</version>
         </dependency>
-
 
         <!-- MarkDown -->
         <dependency>
@@ -100,6 +105,36 @@
             <artifactId>markdowngenerator</artifactId>
             <version>1.3.1.1</version>
         </dependency>
+
+        <!-- HTML 2 IMG -->
+        <dependency>
+            <groupId>com.openhtmltopdf</groupId>
+            <artifactId>openhtmltopdf-core</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.openhtmltopdf</groupId>
+            <artifactId>openhtmltopdf-java2d</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.openhtmltopdf</groupId>
+            <artifactId>openhtmltopdf-pdfbox</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+        <!--        <dependency>-->
+<!--            <groupId>org.xhtmlrenderer</groupId>-->
+<!--            <artifactId>flying-saucer-core</artifactId>-->
+<!--            <version>9.4.1</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.xhtmlrenderer</groupId>-->
+<!--            <artifactId>flying-saucer-pdf</artifactId>-->
+<!--            <version>9.4.1</version>-->
+<!--        </dependency>-->
+
+
 
 
     </dependencies>
